@@ -13,7 +13,7 @@ Requires: pupmod-simp-simplib >= 2.0.0-0
 Requires: pupmod-simp-simplib < 3.0.0-0
 Requires: pupmod-simp-stunnel >= 5.0.0-0
 Requires: pupmod-simp-stunnel < 6.0.0-0
-Requires: pupmod-simp-sysctl >= 5.0.0-0
-Requires: pupmod-simp-sysctl < 6.0.0-0
+Requires: pupmod-herculesteam-augeasproviders_sysctl < 3.0.0-0
+Requires: pupmod-herculesteam-augeasproviders_sysctl >= 2.1.0-0
 Requires: pupmod-simp-tcpwrappers >= 5.0.0-0
 Requires: pupmod-simp-tcpwrappers < 6.0.0-0
