@@ -1,3 +1,6 @@
+* Fri Dec 02 2016 Nick Markowski <nmarkowski@keywcorp.com> - 3.0.1-0
+- Removed pupmod-simp-sysctl in favor of augeas-sysctl
+
 * Tue Nov 22 2016 Jeanne Greulich <jgreulich@onyxpoint.com> - 3.0.0-0
 - Update major version release for SIMP 6
 
